--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,10 @@
         }
       }
     </script>
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" /> -->
+    <link rel="icon" type="image/png" sizes="16x16"  href="/favicons/favicon-16x16.png">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="theme-color" content="#ffffff">
     <link rel="canonical" href="http://advocat-yevtushenko.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
