--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
       }
     </script>
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" /> -->
-    <link rel="icon" type="image/png" sizes="16x16"  href="/favicons/favicon-16x16.png">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/png" sizes="16x16"  href="/build/static/media/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <link rel="canonical" href="http://advocat-yevtushenko.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
